# sdviz

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
examples/color_histogram/: CMakeLists.txt  main.cpp
examples/radiological_image/: CMakeLists.txt  main.cpp  rad_image.cpp
resource/: .babelrc  bundle.js  index.html  package.json  webpack.config.babel.js
resource/src/: index.jsx
resource/src/actions/: ConnectionActionCreators.jsx  ElementActionCreators.jsx
resource/src/componenets/: ButtonElement.jsx  CanvasElement.jsx  ChartElement.jsx  ContainerElement.jsx  ElementComponent.jsx  Main.jsx  SliderElement.jsx  TextElement.jsx
resource/src/constants/: ActionTypes.jsx  Resources.jsx
resource/src/containers/: MainContainer.jsx
resource/src/reducers/: Connection.jsx  Elements.jsx  index.jsx
resource/src/store/: configure-store.jsx
sdviz/: action.hpp  canvas_impl.cpp  canvas_impl.hpp  context.cpp  context.hpp  element_impl.hpp  image_impl.cpp  image_impl.hpp  layout_impl.hpp  log.hpp  model_sync_server.cpp  model_sync_server.hpp  mpsc_queue.hpp  resource.cpp  resource.hpp  sdviz.cpp  sdviz.hpp  serdes.cpp  serdes.hpp  type_util.cpp  type_util.hpp  variant_util.hpp  visitor.hpp
